--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "vivia-marked",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "vivia marked",
-  "author": "Saurlax <saurlax@qq.com>",
+  "author": "Saurlax",
   "keywords": [
     "vivia",
     "marked"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/saurlax/vivia-marked.git"
+    "url": "git+https://github.com/saurlax/vivia-marked.git"
   },
   "license": "MIT",
   "dependencies": {
